# OpenCL-LLM

./: .gitignore  Readme.md  Runner.txt
Hardware/: CMakeLists.txt  README.md
Hardware/assets/: benchmark_results.csv  benchmark_results_CPU.csv
Hardware/kernels/: memory_bench.cl
Hardware/src/: cl_info.cpp  memory_benchmarking.cpp  memory_benchmarking_scale.cpp
Phase_1/kernels/: vec_add.cl
Phase_1/src/: cl_info.cpp  memory_transfer.cpp  vec_add.cpp
Phase_2/kernels/: mm_naive.cl  sum_reduce.cl
Phase_2/src/: matrix_multiplication.cpp  vector_sum.cpp
Vector_Foundations/: Readme.md
Vector_Foundations/kernels/: matmul.cl  naive_matmul.cl  register_matmul.cl
Vector_Foundations/src/: matmul.cpp
utils/: utils.hpp
